src/com/schemati/compiler/mainLanguage/antlr4/MainParser.java
// Generated from Main.g4 by ANTLR 4.8

package com.schemati.compiler.mainLanguage.antlr4;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class MainParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.8", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, Type=4, Print=5, Break=6, Continue=7, Start=8, 
		At=9, During=10, If=11, Else=12, For=13, Null=14, Anim=15, Boolean=16, 
		Double=17, Integer=18, Color=19, Seconds=20, Milliseconds=21, Array=22, 
		Void=23, LRp=24, RRp=25, Pointer=26, LBr=27, RBr=28, LPa=29, RPa=30, Comma=31, 
		DblDots=32, Semicolon=33, DblPlus=34, DblMinus=35, Mult=36, Div=37, Mod=38, 
		Sum=39, Sub=40, AddArr=41, RemoveArr=42, DblEqual=43, EqLess=44, EqGreater=45, 
		Equal=46, NtEqual=47, Less=48, Greater=49, ID=50, String=51, Comment=52, 
		WS=53;
	public static final int
		RULE_prog = 0, RULE_controlStruct = 1, RULE_animStruct = 2, RULE_stat = 3, 
		RULE_createVar = 4, RULE_assignVar = 5, RULE_assignFunc = 6, RULE_changeArr = 7, 
		RULE_returnStat = 8, RULE_print = 9, RULE_loopCtrl = 10, RULE_block = 11, 
		RULE_blockFunc = 12, RULE_ifStat = 13, RULE_elseStat = 14, RULE_atTimeDuring = 15, 
		RULE_atEventDuring = 16, RULE_forStat = 17, RULE_startCtrl = 18, RULE_expr = 19, 
		RULE_functionCall = 20, RULE_args = 21, RULE_typedArgs = 22, RULE_typeID = 23, 
		RULE_var = 24, RULE_attr = 25, RULE_vector2 = 26;
	private static String[] makeRuleNames() {
		return new String[] {
			"prog", "controlStruct", "animStruct", "stat", "createVar", "assignVar", 
			"assignFunc", "changeArr", "returnStat", "print", "loopCtrl", "block", 
			"blockFunc", "ifStat", "elseStat", "atTimeDuring", "atEventDuring", "forStat", 
			"startCtrl", "expr", "functionCall", "args", "typedArgs", "typeID", "var", 
			"attr", "vector2"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'function'", "'return'", "'in'", null, "'print'", "'break'", "'continue'", 
			"'start'", "'at'", "'during'", "'if'", "'else'", "'for'", "'null'", "'anim'", 
			null, null, null, null, null, null, "'[]'", "'Void'", "'['", "']'", "'->'", 
			"'{'", "'}'", "'('", "')'", "','", "':'", "';'", "'++'", "'--'", "'*'", 
			"'/'", "'%'", "'+'", "'-'", "'<<'", "'>>'", "'=='", "'<='", "'>='", "'='", 
			"'!='", "'<'", "'>'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, "Type", "Print", "Break", "Continue", "Start", 
			"At", "During", "If", "Else", "For", "Null", "Anim", "Boolean", "Double", 
			"Integer", "Color", "Seconds", "Milliseconds", "Array", "Void", "LRp", 
			"RRp", "Pointer", "LBr", "RBr", "LPa", "RPa", "Comma", "DblDots", "Semicolon", 
			"DblPlus", "DblMinus", "Mult", "Div", "Mod", "Sum", "Sub", "AddArr", 
			"RemoveArr", "DblEqual", "EqLess", "EqGreater", "Equal", "NtEqual", "Less", 
			"Greater", "ID", "String", "Comment", "WS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Main.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public MainParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class ProgContext extends ParserRuleContext {
		public List<StatContext> stat() {
			return getRuleContexts(StatContext.class);
		}
		public StatContext stat(int i) {
			return getRuleContext(StatContext.class,i);
		}
		public List<AssignFuncContext> assignFunc() {
			return getRuleContexts(AssignFuncContext.class);
		}
		public AssignFuncContext assignFunc(int i) {
			return getRuleContext(AssignFuncContext.class,i);
		}
		public List<ControlStructContext> controlStruct() {
			return getRuleContexts(ControlStructContext.class);
		}
		public ControlStructContext controlStruct(int i) {
			return getRuleContext(ControlStructContext.class,i);
		}
		public List<AnimStructContext> animStruct() {
			return getRuleContexts(AnimStructContext.class);
		}
		public AnimStructContext animStruct(int i) {
			return getRuleContext(AnimStructContext.class,i);
		}
		public List<PrintContext> print() {
			return getRuleContexts(PrintContext.class);
		}
		public PrintContext print(int i) {
			return getRuleContext(PrintContext.class,i);
		}
		public List<StartCtrlContext> startCtrl() {
			return getRuleContexts(StartCtrlContext.class);
		}
		public StartCtrlContext startCtrl(int i) {
			return getRuleContext(StartCtrlContext.class,i);
		}
		public ProgContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_prog; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MainListener ) ((MainListener)listener).enterProg(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MainListener ) ((MainListener)listener).exitProg(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MainVisitor ) return ((MainVisitor<? extends T>)visitor).visitProg(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgContext prog() throws RecognitionException {
		ProgContext _localctx = new ProgContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_prog);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(62);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__0) | (1L << Type) | (1L << Print) | (1L << Start) | (1L << If) | (1L << For) | (1L << Null) | (1L << Anim) | (1L << Boolean) | (1L << Double) | (1L << Integer) | (1L << Color) | (1L << Seconds) | (1L << Milliseconds) | (1L << Array) | (1L << LBr) | (1L << LPa) | (1L << Sum) | (1L << Sub) | (1L << ID) | (1L << String))) != 0)) {
				{
				setState(60);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case Type:
				case Null:
				case Boolean:
				case Double:
				case Integer:
				case Color:
				case Seconds:
				case Milliseconds:
				case Array:
				case LBr:
				case LPa:
				case Sum:
				case Sub:
				case ID:
				case String:
					{
					setState(54);
					stat();
					}
					break;
				case T__0:
					{
					setState(55);
					assignFunc();
					}
					break;
				case If:
				case For:
					{
					setState(56);
					controlStruct();
					}
					break;
				case Anim:
					{
					setState(57);
					animStruct();
					}
					break;
				case Print:
					{
					setState(58);
					print();
					}
					break;
				case Start:
					{
					setState(59);
					startCtrl();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				setState(64);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ControlStructContext extends ParserRuleContext {
		public IfStatContext ifStat() {
			return getRuleContext(IfStatContext.class,0);
		}
		public ForStatContext forStat() {
			return getRuleContext(ForStatContext.class,0);
		}
		public ControlStructContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_controlStruct; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MainListener ) ((MainListener)listener).enterControlStruct(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MainListener ) ((MainListener)listener).exitControlStruct(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MainVisitor ) return ((MainVisitor<? extends T>)visitor).visitControlStruct(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ControlStructContext controlStruct() throws RecognitionException {
		ControlStructContext _localctx = new ControlStructContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_controlStruct);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(67);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case If:
				{
				setState(65);
				ifStat();
				}
				break;
			case For:
				{
				setState(66);
				forStat();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AnimStructContext extends ParserRuleContext {
		public TerminalNode Anim() { return getToken(MainParser.Anim, 0); }
		public TerminalNode LBr() { return getToken(MainParser.LBr, 0); }
		public TerminalNode RBr() { return getToken(MainParser.RBr, 0); }
		public List<AtTimeDuringContext> atTimeDuring() {
			return getRuleContexts(AtTimeDuringContext.class);
		}
		public AtTimeDuringContext atTimeDuring(int i) {
			return getRuleContext(AtTimeDuringContext.class,i);
		}
		public List<AtEventDuringContext> atEventDuring() {
			return getRuleContexts(AtEventDuringContext.class);
		}
		public AtEventDuringContext atEventDuring(int i) {
			return getRuleContext(AtEventDuringContext.class,i);
		}
		public AnimStructContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_animStruct; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MainListener ) ((MainListener)listener).enterAnimStruct(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MainListener ) ((MainListener)listener).exitAnimStruct(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MainVisitor ) return ((MainVisitor<? extends T>)visitor).visitAnimStruct(this);
			else return visitor.visitChildren(this);
		}
	}

	public final AnimStructContext animStruct() throws RecognitionException {
		AnimStructContext _localctx = new AnimStructContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_animStruct);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(69);
			match(Anim);
			setState(70);
			match(LBr);
			setState(75);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==At) {
				{
				setState(73);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
				case 1:
					{
					setState(71);
					atTimeDuring();
					}
					break;
				case 2:
					{
					setState(72);
					atEventDuring();
					}
					break;
				}
				}
				setState(77);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(78);
			match(RBr);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StatContext extends ParserRuleContext {
		public TerminalNode Semicolon() { return getToken(MainParser.Semicolon, 0); }
		public CreateVarContext createVar() {
			return getRuleContext(CreateVarContext.class,0);
		}
		public AssignVarContext assignVar() {
			return getRuleContext(AssignVarContext.class,0);
		}
		public ChangeArrContext changeArr() {
			return getRuleContext(ChangeArrContext.class,0);
		}
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public StatContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_stat; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MainListener ) ((MainListener)listener).enterStat(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MainListener ) ((MainListener)listener).exitStat(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MainVisitor ) return ((MainVisitor<? extends T>)visitor).visitStat(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StatContext stat() throws RecognitionException {
		StatContext _localctx = new StatContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_stat);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(84);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,5,_ctx) ) {
			case 1:
				{
				setState(80);
				createVar();
				}
				break;
			case 2:
				{
				setState(81);
				assignVar();
				}
				break;
			case 3:
				{
				setState(82);
				changeArr();
				}
				break;
			case 4:
				{
				setState(83);
				expr(0);
				}
				break;
			}
			setState(86);
			match(Semicolon);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CreateVarContext extends ParserRuleContext {
		public ExprContext e1;
		public TerminalNode Type() { return getToken(MainParser.Type, 0); }
		public TerminalNode ID() { return getToken(MainParser.ID, 0); }
		public TerminalNode Equal() { return getToken(MainParser.Equal, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public CreateVarContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_createVar; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MainListener ) ((MainListener)listener).enterCreateVar(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MainListener ) ((MainListener)listener).exitCreateVar(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MainVisitor ) return ((MainVisitor<? extends T>)visitor).visitCreateVar(this);
			else return visitor.visitChildren(this);
		}
	}

	public final CreateVarContext createVar() throws RecognitionException {
		CreateVarContext _localctx = new CreateVarContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_createVar);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(88);
			match(Type);
			setState(89);
			match(ID);
			setState(90);
			match(Equal);
			setState(91);
			((CreateVarContext)_localctx).e1 = expr(0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AssignVarContext extends ParserRuleContext {
		public ExprContext e1;
		public VarContext var() {
			return getRuleContext(VarContext.class,0);
		}
		public TerminalNode Equal() { return getToken(MainParser.Equal, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public AssignVarContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_assignVar; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MainListener ) ((MainListener)listener).enterAssignVar(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MainListener ) ((MainListener)listener).exitAssignVar(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MainVisitor ) return ((MainVisitor<? extends T>)visitor).visitAssignVar(this);
			else return visitor.visitChildren(this);
		}
	}

	public final AssignVarContext assignVar() throws RecognitionException {
		AssignVarContext _localctx = new AssignVarContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_assignVar);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(93);
			var();
			setState(94);
			match(Equal);
			setState(95);
			((AssignVarContext)_localctx).e1 = expr(0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AssignFuncContext extends ParserRuleContext {
		public TerminalNode Type() { return getToken(MainParser.Type, 0); }
		public TerminalNode ID() { return getToken(MainParser.ID, 0); }
		public TerminalNode LPa() { return getToken(MainParser.LPa, 0); }
		public TerminalNode RPa() { return getToken(MainParser.RPa, 0); }
		public BlockFuncContext blockFunc() {
			return getRuleContext(BlockFuncContext.class,0);
		}
		public TypedArgsContext typedArgs() {
			return getRuleContext(TypedArgsContext.class,0);
		}
		public AssignFuncContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_assignFunc; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MainListener ) ((MainListener)listener).enterAssignFunc(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MainListener ) ((MainListener)listener).exitAssignFunc(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MainVisitor ) return ((MainVisitor<? extends T>)visitor).visitAssignFunc(this);
			else return visitor.visitChildren(this);
		}
	}

	public final AssignFuncContext assignFunc() throws RecognitionException {
		AssignFuncContext _localctx = new AssignFuncContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_assignFunc);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(97);
			match(T__0);
			setState(98);
			match(Type);
			setState(99);
			match(ID);
			setState(100);
			match(LPa);
			setState(102);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==Type) {
				{
				setState(101);
				typedArgs();
				}
			}

			setState(104);
			match(RPa);
			setState(105);
			blockFunc();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ChangeArrContext extends ParserRuleContext {
		public Token op;
		public TerminalNode ID() { return getToken(MainParser.ID, 0); }
		public List<ExprContext> expr() {
			return getRuleContexts(ExprContext.class);
		}
		public ExprContext expr(int i) {
			return getRuleContext(ExprContext.class,i);
		}
		public TerminalNode AddArr() { return getToken(MainParser.AddArr, 0); }
		public TerminalNode RemoveArr() { return getToken(MainParser.RemoveArr, 0); }
		public List<TerminalNode> Comma() { return getTokens(MainParser.Comma); }
		public TerminalNode Comma(int i) {
			return getToken(MainParser.Comma, i);
		}
		public ChangeArrContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_changeArr; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MainListener ) ((MainListener)listener).enterChangeArr(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MainListener ) ((MainListener)listener).exitChangeArr(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MainVisitor ) return ((MainVisitor<? extends T>)visitor).visitChangeArr(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ChangeArrContext changeArr() throws RecognitionException {
		ChangeArrContext _localctx = new ChangeArrContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_changeArr);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(107);
			match(ID);
			setState(108);
			((ChangeArrContext)_localctx).op = _input.LT(1);
			_la = _input.LA(1);
			if ( !(_la==AddArr || _la==RemoveArr) ) {
				((ChangeArrContext)_localctx).op = (Token)_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			setState(109);
			expr(0);
			setState(114);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==Comma) {
				{
				{
				setState(110);
				match(Comma);
				setState(111);
				expr(0);
				}
				}
				setState(116);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ReturnStatContext extends ParserRuleContext {
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public TerminalNode Semicolon() { return getToken(MainParser.Semicolon, 0); }
		public ReturnStatContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_returnStat; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MainListener ) ((MainListener)listener).enterReturnStat(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MainListener ) ((MainListener)listener).exitReturnStat(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MainVisitor ) return ((MainVisitor<? extends T>)visitor).visitReturnStat(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ReturnStatContext returnStat() throws RecognitionException {
		ReturnStatContext _localctx = new ReturnStatContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_returnStat);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(117);
			match(T__1);
			setState(118);
			expr(0);
			setState(119);
			match(Semicolon);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PrintContext extends ParserRuleContext {
		public TerminalNode Print() { return getToken(MainParser.Print, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public TerminalNode Semicolon() { return getToken(MainParser.Semicolon, 0); }
		public PrintContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_print; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MainListener ) ((MainListener)listener).enterPrint(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MainListener ) ((MainListener)listener).exitPrint(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MainVisitor ) return ((MainVisitor<? extends T>)visitor).visitPrint(this);
			else return visitor.visitChildren(this);
		}
	}

	public final PrintContext print() throws RecognitionException {
		PrintContext _localctx = new PrintContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_print);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(121);
			match(Print);
			setState(122);
			expr(0);
			setState(123);
			match(Semicolon);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class LoopCtrlContext extends ParserRuleContext {
		public TerminalNode Semicolon() { return getToken(MainParser.Semicolon, 0); }
		public TerminalNode Break() { return getToken(MainParser.Break, 0); }
		public TerminalNode Continue() { return getToken(MainParser.Continue, 0); }
		public LoopCtrlContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_loopCtrl; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MainListener ) ((MainListener)listener).enterLoopCtrl(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MainListener ) ((MainListener)listener).exitLoopCtrl(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MainVisitor ) return ((MainVisitor<? extends T>)visitor).visitLoopCtrl(this);
			else return visitor.visitChildren(this);
		}
	}

	public final LoopCtrlContext loopCtrl() throws RecognitionException {
		LoopCtrlContext _localctx = new LoopCtrlContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_loopCtrl);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(125);
			_la = _input.LA(1);
			if ( !(_la==Break || _la==Continue) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			setState(126);
			match(Semicolon);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
